@startuml Restaurants

entity User {
     id,
  name,
  image,
  email,
}
entity Item {
      id,
  name,
  description,
  price,
  allergies,
  type,
  image,
}


entity Order {
    id
     items: [
    {
      itemId: String,
      qty: Number,
    },
  ],
  orderTotal
  tableNumbe
  userId
}



User::id -- Order::id
Order::order_id -- Item::id

@enduml
